SERVER-8786 Make sure that the ShardingConnectionHook gets added to the connection pools anytime sharding is initialized